# whatplatformis

./: .eslintignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.mjs  tsconfig.json
.changeset/: beige-mangos-admire.md  config.json  funny-lamps-mate.md  giant-pugs-cry.md  gorgeous-phones-care.md  late-zoos-complain.md  rich-lizards-bow.md  tricky-wolves-dream.md  weak-ghosts-fly.md  young-ravens-sell.md
.github/workflows/: ci.yml  release.yml  snapshot-release.yml
.husky/: pre-commit
example/: package.json
example/rollup/: index.ts  package.json  rollup.config.mjs
example/test/: browser.test.tsx
example/webpack/: package.json  postcss.config.js  tsconfig.json
src/exports/: browser.ts  default.ts  (+2 more)
swc-plugin-whatplatform/: CHANGELOG.md  Cargo.toml  package.json
swc-plugin-whatplatform/src/: lib.rs
swc-plugin-whatplatform/src/whatplatform/: mod.rs
swc-plugin-whatplatform/tests/: fixture.rs
swc-plugin-whatplatform/tests/fixtures/browser/1/: input.ts  output.ts
swc-plugin-whatplatform/tests/fixtures/browser/2/: input.ts  output.ts
swc-plugin-whatplatform/tests/fixtures/custom/: input.ts  output.ts
swc-plugin-whatplatform/tests/fixtures/server/: input.ts  output.ts
swc-plugin-whatplatform/tests/fixtures/server-fns/browser/: input.ts  output.ts
swc-plugin-whatplatform/tests/fixtures/server-fns/server/: input.ts  output.ts
swc-plugin-whatplatform/tests/fixtures/server/1/: output.ts
test/: browser.test.ts  bundle.test.ts  node.test.ts  tree-shaking.test.ts
(+6 files in other folders)
