[package]
name = "swc-plugin-whatplatformis"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "0.90.26", features = ["ecma_plugin_transform"] }
tracing = { version = "0.1.37", features = ["release_max_level_off"] }

[dev-dependencies]
swc_core = { version = "0.90.26", features = ["ecma_plugin_transform", "testing_transform", "ecma_parser_typescript"] }
testing = "0.35.22"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
